--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,15 @@
 ja:
+  activerecord:
+    models:
+      user: ユーザー
+    attributes:
+      user:
+        username: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード確認
+        created_at: 登録日時
+        updated_at: 更新日時
   controllers:
     application:
       not_authenticated:
